Force statuspanel max-width to 100% to avoid potential clipping

--- a/chrome/status_inside_urlbar.css
+++ b/chrome/status_inside_urlbar.css
@@ -51,7 +51,7 @@ As a workaround, the -moz-element background image is removed somewhat often whi
 /* If you use a theme where urlbar is partially transparent you should edit this color to something that closely matches the perceived color of urlbar. Or perhaps use background-image - linear-gradient() can work well here. But keep the color or image opaque or otherwise you'll face an issue where urlbar text bleeds through */
 #statuspanel-inner{ background-color: var(--toolbar-bgcolor,--toolbar-non-lwt-bgcolor) }
 
-#statuspanel{ color: var(--lwt-toolbar-field-color, black) ; z-index: -1; }
+#statuspanel{ color: var(--lwt-toolbar-field-color, black) ; z-index: -1; max-width: 100% !important; }
 #statuspanel[type="status"] { color: Highlight }
 
 /* You will need to adjust these probably as they depend on OS, text size etc. */
